# iSort

./: .gitignore  .pylintrc  LICENSE  README.md  build.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/workflows/: pylint.yml
assets/: Info.plist
docs/: CHANGELOG.md  PORTFOLIO.md
src/: main.py
src/core/: __init__.py  duplicates.py  hasher.py  inventory.py  metadata.py  organizer.py  router.py  worker.py
src/isort_app/: __init__.py  main.py
src/isort_app/core/: __init__.py  duplicates.py  inventory.py  metadata.py  organizer.py  router.py  worker.py
src/isort_app/ui/: main_window.py  stats_detail_dialog.py
src/isort_app/utils/: __init__.py  manifest.py
src/ui/: __init__.py  log_viewer.py  main_window.py  main_window_old.py  resources.py  stats_detail_dialog.py  stats_widget.py
src/utils/: __init__.py  checkpoint.py  error_log.py
