[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isort"
version = "10.0.0"
description = "Apple Device File Organizer"
readme = "README.md"
authors = [
    { name = "RazorBackRoar" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
]

[project.urls]
Homepage = "https://github.com/RazorBackRoar/isort"
Repository = "https://github.com/RazorBackRoar/isort"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.scripts]
isort = "main:main"

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", "build", "dist"]
pythonVersion = "3.10"
pythonPlatform = "Darwin"

[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring
    "C0103", # invalid-name
]
